# uxnsmal

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  REFERENCE.md  TODO.md  makefile  opcodes.html  output.rom
uxnsmal/: Cargo.toml
uxnsmal/src/: ast.rs  bytecode.rs  compiler.rs  context.rs  error.rs  generator.rs  ir.rs  lexer.rs  lib.rs  macros.rs  opcodes.rs  parser.rs  problem.rs  problems.rs  program.rs  reporter.rs  symbol.rs  symbols.rs  typechecker.rs  warn.rs
uxnsmal/src/ast/: def.rs  expr.rs
uxnsmal/src/typechecker/: consumer.rs  context.rs  scope.rs  stack.rs
uxnsmal/tests/: ast.rs  compiler.rs  lexer.rs  parser.rs  text_testing.rs  typechecker.rs
uxnsmal/tests/ast/: definitions.smal  definitions.smal.txt  err.definitions.smal  err.definitions.smal.txt  err.expressions.smal  err.expressions.smal.txt  expressions.smal  expressions.smal.txt
uxnsmal/tests/lexer/: all-tokens.smal  all-tokens.smal.txt  comments.smal  comments.smal.txt  err.literals.smal  err.literals.smal.txt  err.punctuation.smal  error.punctuation.smal.txt  intrinsics.smal  intrinsics.smal.txt  keywords.smal  keywords.smal.txt  literals.smal  literals.smal.txt  punctuation.smal  punctuation.smal.txt
uxnsmal/tests/typechecker/: arithmetic.smal  arithmetic.smal.txt  binding.smal  binding.smal.txt  blocks.smal  blocks.smal.txt  cast.smal  cast.smal.txt  err.arithmetic.smal  err.arithmetic.smal.txt  err.binding.smal  err.binding.smal.txt  err.blocks.smal  err.blocks.smal.txt  err.include.smal  err.include.smal.txt  err.logic.smal  err.logic.smal.txt  err.manipulation.smal  (+17 more)
(+40 files in other folders)
