[workspace]
resolver = "3"
members = ["uxnsmal", "uxnsmal-cli"]
default-members = ["uxnsmal-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["bogdanov <bbogdan_ov@mail.ru>"]
repository = "https://github.com/bbogdan-ov/uxnsmal"
license = "MIT"

[workspace.dependencies]
bitflags = "2.9.1"
thiserror = "2.0.12"
vec1 = "1.12.1"
