[package]
name = "uxnsmal"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitflags.workspace = true
vec1.workspace = true
unicode-width.workspace = true

[lints.clippy]
# FIXME!: clippy doesn't like that `uxnsmal::error::Error` has large variants
result_large_err = "allow"
